--- a/lib/ansible/roles/php/tasks/mailcatcher.yml
+++ b/lib/ansible/roles/php/tasks/mailcatcher.yml
@@ -5,17 +5,16 @@
     force=yes
   with_items:
     - libsqlite3-dev
-    - rubygems
 
-- name: mailcatcher | install packages
-  command: >
-    gem install {{ item }} --no-ri --no-rdoc
-  with_items:
-    - rdoc
-    - mailcatcher
+- name: mailcatcher | install RVM 
+  shell: \curl -L https://get.rvm.io | bash -s stable --ruby
 
-#--smtp-ip= --http-ip=
-#--no-quit
+- name: mailcatcher | install mailcatcher
+  shell: /usr/local/rvm/bin/rvm default@mailcatcher --create do gem install mailcatcher
+
+- name: mailcatcher | install wrapper
+  shell: /usr/local/rvm/bin/rvm wrapper default@mailcatcher --no-prefix mailcatcher catchmail
+
 - name: mailcatcher | set facts
   set_fact: >
     mailcatcher_ip="--ip={{ php.mailcatcher.ip|default('0.0.0.0') }}"
