Added ignore errors for reprovisioning temporarilly.

--- a/lib/ansible/roles/php/tasks/mailcatcher.yml
+++ b/lib/ansible/roles/php/tasks/mailcatcher.yml
@@ -35,6 +35,7 @@
 
 - name: mailcatcher | start it
   command: /etc/init.d/mailcatcher
+  ignore_errors: yes
 
 - name: mailcatcher | set php ini
   template: >
