--- a/lib/ansible/roles/apache/tasks/apache.yml
+++ b/lib/ansible/roles/apache/tasks/apache.yml
@@ -24,6 +24,20 @@
   notify:
     - apache-restart
 
+- name: apache | apache2 lock
+  file: >
+    path=/var/lock/apache2
+    owner={{ apache.user }}
+    group={{ apache.group }}
+
+- name: apache | set envvars
+  template: >
+    src=envvars.j2
+    dest='/etc/apache2/envvars'
+  notify:
+    - apache-restart
+  when: ansible_os_family == 'Debian'
+
 - name: apache | install apache modules
   command: a2enmod {{ item }}
   with_items: apache.modules
